changes font size for different screen sizes on root css and fixes footer on smaller screens

--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -1,11 +1,10 @@
-.content-wrapper {
+.wrapper {
   color: var(--main-text-color);
-  font-size: 0.9rem;
   display: flex;
   justify-content: space-around;
   background-color: var(--main-bg-color);
   border-radius: 0;
-  width: 100%;
+  padding: 0.5em 0;
 }
 
 .information-wrapper {
@@ -15,6 +14,11 @@
   gap: 0.5em;
   justify-content: center;
   vertical-align: middle;
+  text-align: center;
+}
+
+div, a {
+  font-size: 0.9em;
 }
 
 a {
