--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,6 +8,7 @@
   margin: 0;
   padding: 0;
   font-family: "Roboto Light", Arial, serif;
+  font-size: 16px;
 }
 
 a {
@@ -28,4 +29,14 @@ a {
   padding: 1em 0 1em 0;
   font-size: 5vw;
   border-radius: 5px;
+}
+
+@media (max-width: 786px) {
+  .container {
+    padding: 3.5rem 0 0;
+  }
+
+  *{
+    font-size: 22px;
+  }
 }
